# Skill-TTRL

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  qwen_1.5b.yaml  qwen_3b.yaml
data/: test_train.json
scripts/: train.py
skill_ttrl/: __init__.py
skill_ttrl/config/: __init__.py  config.py
skill_ttrl/core/: __init__.py  grpo.py  majority_vote.py  merge_llm.py  output_parser.py  skill_bank.py  skill_extractor.py
skill_ttrl/data/: dataset.py
skill_ttrl/prompts/: __init__.py  formatter.py  templates.py
skill_ttrl/training/: __init__.py  reward.py  rollout.py  trainer.py
skill_ttrl/utils/: logging.py  math_grader.py
tests/: test_grpo.py  test_majority_vote.py  test_math_grader.py  test_merge_llm.py  test_output_parser.py  test_pipeline.py  test_prompt_formatter.py  test_skill_bank.py
