[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-ttrl"
version = "0.1.0"
description = "Skill TTRL: Training models to autonomously generate, retrieve, and evolve skills via test-time reinforcement learning"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "sympy>=1.12",
    "sentence-transformers>=2.7.0",
    "openai>=1.30.0",
    "vllm>=0.4.0",
    "accelerate>=0.30.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["skill_ttrl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
